# Neuro-Air

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  README.md  pyproject.toml
benchmark/: .gitattributes  .gitignore  README.md  benchmarks_neuroair_ablation.json  benchmarks_neuroair_ablation_tiers.json  config.py.example  models.toml.example  pyproject.toml
benchmark/adapters/: __init__.py  cave_agent_adapter.py  multiagent_adapter.py
benchmark/analysis/: compute_human_eval_R1-3.ipynb  llm_and_human_scores.xls
benchmark/core/: __init__.py  agent.py  evaluator.py  system_instructions.py  tracker.py  types.py  validation.py
benchmark/domains/Beijing/: __init__.py  prompts.py  stations.py
benchmark/domains/HB/: __init__.py  db.py  prompts.py
benchmark/domains/HK/: __init__.py  db.py  prompts.py  tools.py
benchmark/evals/neuroair/comparative_assessment/HB/: hb_1_2.json  hb_1_2.py  hb_1_23.json  hb_1_23.py  hb_1_25.json  hb_1_25.py  hb_1_28.json  hb_1_28.py  hb_1_31.json  hb_1_31.py  hb_1_33.json  hb_1_33.py  hb_1_37.json  hb_1_37.py  hb_2_11.json  hb_2_11.py  hb_2_15.json  hb_2_15.py  hb_2_21.json  hb_2_21.py  hb_2_23.json  hb_2_23.py
benchmark/evals/neuroair/comparative_assessment/HK/: hk_1_11.json  (+13 more)
benchmark/experiments/Neuro-Air/: FINDINGS.md  pv_matrix.json
benchmark/scripts/: _category_table.py  _cluster_bootstrap.py  _emission_lag_contrast.py  _export_pv_matrix.py  _export_pv_matrix_dbfree.py  _final_all.py  _fire_analysis.py  _fire_analysis2.py  _fire_analysis3.py  _fire_wind_verify.py  _probe_stored_verdict.py  _reconcile_audit_tasks.py  audit_neuroair.py
(+1456 files in other folders)
