[project]
name = "air-bench"
version = "0.1.0"
description = "Benchmark dataset and evaluation framework for evaluating LLM agents on air pollution analysis tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "cave-agent[all]>=0.7.5",
    "openai>=2.0.0",
    "pydantic>=2.0",
    "pytest>=9.0.2",
    "anthropic>=0.75.0",
    "openai-agents>=0.6.4",
    "greenlet>=3.3.1",
    "psycopg[binary]>=3.3.2",
    "tabulate>=0.9.0",
    "sqlalchemy>=2.0.46",
    "geopandas>=1.1.2",
    "asyncpg>=0.31.0",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "osmnx>=2.1.0",
    "rasterio>=1.5.0",
]
